2007-08-09  Mitz Pettel  <mitz@webkit.org>

Reviewed by Justin Garcia.

        - fix http://bugs.webkit.org/show_bug.cgi?id=14347
          REGRESSION (r21291): Initiating a drag near the edge of a selection deselects it

        Test: editing/selection/contains-boundaries.html

        * editing/SelectionController.cpp:
        (WebCore::SelectionController::contains): Changed to return true for the
        selection boundaries too.

2007-08-09  Mitz Pettel  <mitz@webkit.org>

        Reviewed by Justin Garcia.

        - test for http://bugs.webkit.org/show_bug.cgi?id=14347
          REGRESSION (r21291): Initiating a drag near the edge of a selection deselects it

        * editing/selection/contains-boundaries-expected.checksum: Added.
        * editing/selection/contains-boundaries-expected.png: Added.
        * editing/selection/contains-boundaries-expected.txt: Added.
        * editing/selection/contains-boundaries.html: Added.


Canonical link: https://commits.webkit.org/19528@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@24974 268f45cc-cd09-0410-ab3c-d52691b4dbfc