WebCore/editing/SelectionController.cpp
@@ -1090,7 +1090,7 @@ bool SelectionController::contains(const IntPoint& point)
     HitTestRequest request(true, true);
     HitTestResult result(point);
     document->renderer()->layer()->hitTest(request, result);
-    Node *innerNode = result.innerNode();
+    Node* innerNode = result.innerNode();
     if (!innerNode || !innerNode->renderer())
         return false;
     
@@ -1104,8 +1104,8 @@ bool SelectionController::contains(const IntPoint& point)
     Position start(m_sel.visibleStart().deepEquivalent());
     Position end(m_sel.visibleEnd().deepEquivalent());
     Position p(visiblePos.deepEquivalent());
-    // A selection doesn't contain its endpoints.
-    return comparePositions(start, p) < 0 && comparePositions(p, end) < 0;
+
+    return comparePositions(start, p) <= 0 && comparePositions(p, end) <= 0;
 }
 
 // Workaround for the fact that it's hard to delete a frame.
